[package]
name = "protomask"
version = "1.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "A user space NAT64 implementation"
readme = "README.md"
homepage = "https://github.com/ewpratten/protomask"
documentation = "https://docs.rs/protomask"
repository = "https://github.com/ewpratten/protomask"
license = "GPL-3.0"
keywords = []
categories = []
exclude = ["/.github/", "/.vscode/"]

[workspace]
members = [
    "libs/easy-tun",
    # "libs/fast-nat",
    "libs/interproto",
    "libs/rfc6052",
    "libs/rtnl",
]

[features]
default = []

[[bin]]
name = "protomask"
path = "src/main.rs"

[dependencies]
# Internal dependencies
easy-tun = { version = "^2.0.0", path = "libs/easy-tun" }
fast-nat = { version = "^1.0.0", path = "libs/fast-nat" }
interproto = { version = "^1.0.0", path = "libs/interproto" }
rfc6052 = { version = "^1.0.0", path = "libs/rfc6052" }
rtnl = { version = "^1.0.0", path = "libs/rtnl", features = ["tokio"] }

# External Dependencies
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
clap = { version = "4.3.11", features = ["derive"] }
ipnet = { version = "2.8.0", features = ["serde"] }
# puffin_http = { version = "0.13.0", optional = true }
# puffin = { version = "0.16.0", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "0.4.19"
fern = "0.6.2"
# nix = "0.26.2"
thiserror = "1.0.44"
# cfg-if = "1.0.0"
# profiling = "1.0.9"
caps = "0.5.5"
bimap = "0.6.3"

[profile.release]
opt-level = 3
lto = true

[package.metadata.deb]
section = "network"
assets = [
    [
        "target/release/protomask",
        "/usr/local/bin/protomask",
        "755",
    ],
    [
        "config/protomask.json",
        "/etc/protomask/protomask.json",
        "644",
    ],
    [
        "README.md",
        "/usr/share/doc/protomask/README.md",
        "644",
    ],
]
conf-files = []
depends = []
maintainer-scripts = "./debian/"
systemd-units = [{ unit-name = "protomask-service", enable = false }]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/protomask", dest = "/usr/local/bin/protomask", mode = "755" },
    { source = "config/protomask.json", dest = "/etc/protomask/protomask.json", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/protomask/README.md", mode = "644" },
]
