[package]
name = "protomask"
version = "0.2.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "A user space NAT64 implementation"
readme = "README.md"
homepage = "https://github.com/ewpratten/protomask"
documentation = "https://docs.rs/protomask"
repository = "https://github.com/ewpratten/protomask"
license = "GPL-3.0"
keywords = []
categories = []

[dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync"] }
clap = { version = "4.3.11", features = ["derive"] }

