[package]
name = "protomask"
version = "0.2.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "A user space NAT64 implementation"
readme = "README.md"
homepage = "https://github.com/ewpratten/protomask"
documentation = "https://docs.rs/protomask"
repository = "https://github.com/ewpratten/protomask"
license = "GPL-3.0"
keywords = []
categories = []

[dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "sync"] }
clap = { version = "4.3.11", features = ["derive"] }
aya = { git = "https://github.com/aya-rs/aya", rev = "f334cbd86ee8c83b29940ee80f0ab80a6d58e5d1", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "f334cbd86ee8c83b29940ee80f0ab80a6d58e5d1" }
