[package]
name = "easy-tun"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "TUN interfaces made easy"
readme = "README.md"
homepage = "https://github.com/ewpratten/protomask/libs/easy-tun"
documentation = "https://docs.rs/easy-tun"
repository = "https://github.com/ewpratten/protomask"
license = "GPL-3.0"
keywords = []
categories = []

[dependencies]
tokio = { version = "^1.29.1", features = ["sync", "rt"] }
log = "^0.4"
libc = "^0.2"
ioctl-gen = "^0.1.1"
rtnetlink = "^0.13.0"