[package]
name = "fast-nat"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "An OSI layer 3 Network Address Table built for speed"
readme = "README.md"
homepage = "https://github.com/ewpratten/protomask/tree/master/libs/fast-nat"
documentation = "https://docs.rs/fast-nat"
repository = "https://github.com/ewpratten/protomask"
license = "GPL-3.0"
keywords = []
categories = []

[dependencies]
log = "^0.4"
rustc-hash = "1.1.0"
thiserror = "^1.0.44"
ipnet = "^2.8.0"