[package]
name = "rfc6052"
version = "1.0.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "Rust functions for interacting with RFC6052 IPv4-Embedded IPv6 Addresses"
readme = "README.md"
homepage = "https://github.com/ewpratten/protomask/tree/master/libs/rfc6052"
documentation = "https://docs.rs/rfc6052"
repository = "https://github.com/ewpratten/protomask"
license = "GPL-3.0"
keywords = ["rfc6052", "ipv4-embedded-ipv6", "address-translation", "ipv4", "ipv6"]
categories = ["algorithms", "encoding", "network-programming"]

[dependencies]
thiserror = "^1.0.44"
ipnet = "^2.8.0"
